--- a/public/css/Show.css
+++ b/public/css/Show.css
@@ -4,14 +4,14 @@
     box-sizing: border-box;
     margin: 0; 
     padding: 0; 
-    background-color:purple;
+    background-color: #24252A;
     font-family: 'Games', sans-serif;
-    text-align: center;
 }
 
 ul {
     list-style: none;
 }
+
 
 body{
     margin:0px;
@@ -41,20 +41,32 @@ header{
 
 .nav_links {
     list-style: none; 
-    color:#edf0f1; 
+    color:#dddddd; 
+    padding:0; 
+    margin:0;
+    overflow: hidden;
 }
 
 .nav_links li {
-    display: inline-block; 
-    padding: 0px 20px; 
+    float:left; 
+    border-right: 1px solid #bbb
+}
+
+.nav_links li:last-child{
+    border-right: none; 
 }
 
 .nav_links li a {
     transition: all 0.3s ease 0s; 
+    display: block; 
+    color: white; 
+    text-align: center; 
+    padding: 14px 16px; 
+    text-decoration: none;
 }
 
 .nav_links li a:hover {
-    color: #0088a9
+    color: #0088a9; 
 }
 
 button {
