--- a/public/css/Show.css
+++ b/public/css/Show.css
@@ -2,10 +2,19 @@
 
 *{
     box-sizing: border-box;
-    margin: 0; 
+    margin: auto; 
     padding: 0; 
-    background-color: #24252A;
+    background-color: #8458b3;
     font-family: 'Games', sans-serif;
+}
+
+
+body{
+    display: flex;
+	min-height: 100vh;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 
 ul {
@@ -13,61 +22,41 @@ ul {
 }
 
 
-body{
-    margin:0px;
-    padding:0px;
-    font-family: 'Games', sans-serif;
-}
+/* Nav Bar */
 
-li, a, button {
-    font-family: 'Games', sans-serif;
-    font-weight: 500; 
-    font-size: 16px; 
-    color: #edf0f1;
-    text-decoration: none;
-}
-
-header{
-    display: flex; 
-    align-items: center; 
-    padding: 30px 10%;
-}
-
-.title{
-    cursor: pointer;
-    margin-right:auto;
-    color: #edf0f1
-}
-
-.nav_links {
-    list-style: none; 
-    color:#dddddd; 
-    padding:0; 
-    margin:0;
-    overflow: hidden;
+.nav_links ul {
+    background-color: #666;
+    margin: auto; 
 }
 
 .nav_links li {
-    float:left; 
-    border-right: 1px solid #bbb
+    border-right: 1px solid #bbb;
+    float: left;
 }
 
-.nav_links li:last-child{
-    border-right: none; 
-}
-
-.nav_links li a {
-    transition: all 0.3s ease 0s; 
-    display: block; 
-    color: white; 
-    text-align: center; 
-    padding: 14px 16px; 
+.nav_links a {
+    transition: all 0.3s ease 0s;
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
     text-decoration: none;
 }
 
-.nav_links li a:hover {
-    color: #0088a9; 
+.nav_links a:hover {
+    background-color: #111;
 }
+
+h1 {
+    color: #a0d2eb;
+    font-size: 20px;
+    padding: 8px;
+    font-family: 'Games', sans-serif;
+    font-size: 50px;
+    cursor: pointer;
+    margin-right:auto;
+}
+
 
 button {
     margin-left:20px;
@@ -88,21 +77,21 @@ button:hover {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    padding: 40px;
+    padding: 50px;
     border-bottom:  1px solid rgba(0,0,0,0,.05)
 }
 
 .gameBox{
-    width: 350px; 
-    border: 10px solid #ececec;
+    width: 500px; 
     text-align: center;
-    margin-bottom: 15px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .gameImg{
     width:100%;
     height: auto;
-} 
+}  
 
 a:hover {
     margin-left:20px;
@@ -127,10 +116,10 @@ input[type=submit] {
     background: purple;
     font-size: 1em;
     border-radius: 10%;
-}
+} */
 
 /* Comment Section */
-.commentContainer{
+commentContainer{
     width: 350px; 
     border: 10px solid #0088a9;
     margin-bottom: 15px;
@@ -142,9 +131,9 @@ input[type=submit] {
 }
 
 .commentBox{
-    background-color: #504A4B;
+    background-color: #a28089;
     border: solid; 
     margin:auto;
     padding: 10px; 
     margin-bottom: 15px;
-}
+} 
