--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8,7 +8,7 @@ body {
 ul {
     list-style-type: none;
     margin: 0;
-    padding: 20px;
+    /* padding: 20px; */
     overflow: hidden;
     top: 0;
     width: 100%;
@@ -21,7 +21,7 @@ ul {
 }
 
 .nav_links li {
-    border-right: 1px solid #bbb;
+    /* border-right: 1px solid #bbb; */
     float: left;
 }
 
@@ -30,8 +30,10 @@ ul {
     display: block;
     color: white;
     text-align: center;
-    padding: 14px 16px;
+    padding: 45px 20px;
     text-decoration: none;
+    border-bottom: 1px solid #bbb;
+    /* margin-top: 20px; */
 }
 
 .nav_links a:hover {
@@ -90,9 +92,9 @@ span {
 p {
     font-family: system-ui;
     /* width: 350px; */
-    border: 10px solid #1a2c54;
-    /* text-align: center; */
+    /* border: 10px solid #1a2c54; */
+    text-align: center;
     /* margin-bottom: 15px; */
-    background-color:  #b45dbb;
-
+    /* background-color:  #b45dbb; */
+    padding: 10px
 }
